--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@supabase/supabase-js": "2.75.0",
     "@vercel/analytics": "1.3.1",
     "autoprefixer": "^10.4.20",
+    "baseline-browser-mapping": "^2.9.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -52,11 +53,11 @@
     "geist": "^1.3.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.546.0",
-    "next": "16.0.10",
+    "next": "^16.1.0",
     "next-themes": "^0.4.6",
-    "react": "19.2.3",
+    "react": "^19.2.3",
     "react-day-picker": "^9.11.1",
-    "react-dom": "19.2.3",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.65.0",
     "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
